FIX: TodoList delete and edit buttons had wrong size

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,14 @@
 body {
     margin: 0;
     color: white;
+    display: flex;
 }
 
 .content {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    min-width: 100vw;
+    min-height: 100vh;
 
     display: flex;
 }
@@ -192,10 +195,11 @@ body {
 .todoListHeader {
     display: flex;
     gap: 10px;
+    font-size: 20px;
 }
 
-.todoListHeader .icon {
-    font-size: 20px;
+.todoListTitle{
+    font-weight: bold;
 }
 
 .areaConfiguration {
